--- a/src/Ollama.Practice.AppHost/appsettings.Development.json
+++ b/src/Ollama.Practice.AppHost/appsettings.Development.json
@@ -6,6 +6,7 @@
         }
     },
     "Parameters": {
-        "PdfUrl": "https://education.alberta.ca/media/3115252/2016_k_to_9_math_pos.pdf"
+        "PdfUrl": "https://education.alberta.ca/media/3115252/2016_k_to_9_math_pos.pdf",
+        "ModelName": "bartowski/Llama-3.2-1B-Instruct-GGUF:IQ4_XS"
     }
 }
